--- a/verstka/app/templates/pages/contacts.jade
+++ b/verstka/app/templates/pages/contacts.jade
@@ -8,3 +8,5 @@ block header
 
 block content
 	include ../blocks/header
+	include ../blocks/contacts/block-map-feedback
+	include ../blocks/contacts/block-bank
